apps/envoy-gateway/longhorn.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-api
  namespace: longhorn-system
spec:
  gatewayClassName: envoy
  infrastructure:
    labels:
      app: envoy-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same  # Same or All or Selector
    # - name: https
    #   protocol: HTTPS
    #   port: 443
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - name: secret-tls
    #         namespace: default
    #   allowedRoutes:
    #     namespaces:
    #       from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-route
  namespace: longhorn-system
spec:
  parentRefs:
  - name: gateway-api
    sectionName: http #allows us to bind to a specific listener in the Gateway
    kind: Gateway
  # hostnames:
  # - longhorn.vabalai.eu
  rules:
  - backendRefs:
    - name: longhorn-frontend
      port: 80
      weight: 1
